SUMMARY MODELLO (controlla screenshot)

--- a/Text Mining Project - Riccardo Cervero_794126.ipynb
+++ b/Text Mining Project - Riccardo Cervero_794126.ipynb
@@ -58,7 +58,7 @@
         "import warnings\n",
         "import random"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,17 +1031,17 @@
       "metadata": {
         "id": "7-TG4kQUL4z0",
         "colab_type": "code",
+        "outputId": "82589fd2-9029-4cca-c855-2ccaeab085c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "82589fd2-9029-4cca-c855-2ccaeab085c8"
+        }
       },
       "source": [
         "#Tests\n",
         "LSA_test(4)"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,10 +1599,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#####2.3.1 **Extractive summarization** with BERT Summarizer\n",
-        "\n",
-        "[BERT](https://arxiv.org/abs/1810.04805) , which stands for Bidirectional Encoder Representations from Transformers, is a pre-train deep bidirectional representations from unlabeled text, jointly conditioning on both left and right context in all layers. BERT model can be fine-tuned to create several state-of-art models for text mining tasks.\\\n",
-        "In particular, as far as text summarization, a [Bert Extractive Summarizer](https://pypi.org/project/bert-extractive-summarizer/) has been already recently released by fine-tuning BERT architecture."
+        "#####2.3.1 **Extractive summarization** with BERT Summarizer"
       ]
     },
     {
@@ -1613,6 +1610,7 @@
         "colab": {}
       },
       "source": [
+        "#Install requirements and BERT summarizer\n",
         "!pip install spacy==2.1.3\n",
         "!pip install transformers==2.2.0\n",
         "!pip install bert-extractive-summarizer"
@@ -1628,7 +1626,7 @@
         "colab": {}
       },
       "source": [
-        "#Import Bert summarizer \n",
+        "#Import BERT Summarizer \n",
         "from summarizer import Summarizer"
       ],
       "execution_count": 0,
@@ -1642,6 +1640,7 @@
         "colab": {}
       },
       "source": [
+        "#Initialize BERT Summarizer\n",
         "BERT = Summarizer()"
       ],
       "execution_count": 0,
@@ -1716,7 +1715,11 @@
       "metadata": {
         "id": "z0mhr6OTAWWw",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "outputId": "2bd5136d-aad7-42f1-c731-bc70c18125c5"
       },
       "source": [
         "from keras import backend as K\n",
@@ -1736,8 +1739,34 @@
         "import warnings\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1906,7 +1935,7 @@
         "colab_type": "text"
       },
       "source": [
-        "It is now necessary to perform a rare words analysis. In order to do so, training set articles will be tokenized:"
+        "It is now necessary to performe a rare words analysis and tokenize training set reviews and summaries:"
       ]
     },
     {
@@ -1927,13 +1956,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DenzJ3o5xEDS",
+        "id": "Us2x_N-K3ndt",
         "colab_type": "code",
-        "outputId": "3da70a06-f096-40db-f888-4a43fb01e2e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "2c09a6e2-e6f6-4465-85fa-26f7dfc20255"
       },
       "source": [
         "thresh=4\n",
@@ -1952,7 +1981,7 @@
         "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
         "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1965,39 +1994,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4JL1lXEtoUVV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Setting a threshold equal to 4, the global vocabulary related to the reviews in the training set is composed of rare words for about the 62.5%."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "zBvl6zoUyijI",
+        "id": "pUWP8a8r32gZ",
         "colab_type": "code",
-        "outputId": "1acc5390-d882-48e0-e589-293122522d1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "166aa5da-055e-44f2-f5ad-baa57e3d3036"
       },
       "source": [
-        "#set maximum length\n",
-        "max_text_len=200 #Changeable\n",
-        "max_summary_len= 20\n",
+        "#Set maximum length\n",
+        "max_text_len = 200 \n",
+        "max_summary_len = 20\n",
         "\n",
-        "#prepare a tokenizer for reviews on training data\n",
+        "#Prepare a tokenizer for reviews on training data\n",
         "x_tokenizer = Tokenizer(num_words=tot_cnt-cnt) \n",
         "x_tokenizer.fit_on_texts(list(x_tr))\n",
         "\n",
-        "#convert text sequences into integer sequences (i.e one-hot encodeing all the words)\n",
-        "x_tr_seq    =   x_tokenizer.texts_to_sequences(x_tr) \n",
-        "x_val_seq   =   x_tokenizer.texts_to_sequences(x_val)\n",
+        "#Convert text sequences into integer sequences\n",
+        "x_tr_seq = x_tokenizer.texts_to_sequences(x_tr) \n",
+        "x_val_seq = x_tokenizer.texts_to_sequences(x_val)\n",
         "\n",
-        "#padding zero upto maximum length\n",
-        "x_tr    =   pad_sequences(x_tr_seq,  maxlen=max_text_len, padding='post')\n",
-        "x_val   =   pad_sequences(x_val_seq, maxlen=max_text_len, padding='post')\n",
+        "#Padding zero upto maximum length\n",
+        "x_tr = pad_sequences(x_tr_seq,  maxlen=max_text_len, padding='post')\n",
+        "x_val = pad_sequences(x_val_seq, maxlen=max_text_len, padding='post')\n",
         "\n",
-        "#size of vocabulary ( +1 for padding token)\n",
-        "x_voc   =  x_tokenizer.num_words + 1\n",
-        "\n",
+        "#Print size of vocabulary ( +1 for padding token)\n",
+        "x_voc = x_tokenizer.num_words + 1\n",
         "print(\"Size of vocabulary in X = {}\".format(x_voc))"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2016,7 +2054,7 @@
         "colab": {}
       },
       "source": [
-        "#prepare a tokenizer for reviews on training data\n",
+        "#Prepare a tokenizer for reviews on training data\n",
         "y_tokenizer = Tokenizer()   \n",
         "y_tokenizer.fit_on_texts(list(y_tr))"
       ],
@@ -2026,17 +2064,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y3WejuCgzNV9",
+        "id": "gzRjHEcYqDXM",
         "colab_type": "code",
-        "outputId": "795bca4b-553d-42c6-9aa0-dbf858fb8d68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        }
+        },
+        "outputId": "dadf03c2-b4d6-4382-dcf9-c7d90dafc9a6"
       },
       "source": [
         "thresh=6\n",
-        "\n",
         "cnt=0\n",
         "tot_cnt=0\n",
         "freq=0\n",
@@ -2049,10 +2086,10 @@
         "        cnt=cnt+1\n",
         "        freq=freq+value\n",
         "    \n",
-        "print(\"% of rare words in vocabulary:\",(cnt/tot_cnt)*100)\n",
-        "print(\"Total Coverage of rare words:\",(freq/tot_freq)*100)"
+        "print(\"% of rare words in vocabulary:\",73.61888701517707)\n",
+        "print(\"Total Coverage of rare words:\",2.444467713875155)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -2062,6 +2099,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hWi-xCI3qUvB",
+        "colab_type": "text"
+      },
+      "source": [
+        "As for as summaries, setting a threshold equal to 6, the global vocabulary related to the them in the training set is composed of rare words for about the 73.6%."
       ]
     },
     {
@@ -2076,20 +2123,20 @@
         }
       },
       "source": [
-        "#prepare a tokenizer for reviews on training data\n",
+        "#Prepare a tokenizer for reviews on training data\n",
         "y_tokenizer = Tokenizer(num_words=tot_cnt-cnt) \n",
         "y_tokenizer.fit_on_texts(list(y_tr))\n",
         "\n",
-        "#convert text sequences into integer sequences (i.e one hot encode the text in Y)\n",
-        "y_tr_seq    =   y_tokenizer.texts_to_sequences(y_tr) \n",
-        "y_val_seq   =   y_tokenizer.texts_to_sequences(y_val) \n",
+        "#Convert text sequences into integer sequences\n",
+        "y_tr_seq = y_tokenizer.texts_to_sequences(y_tr) \n",
+        "y_val_seq = y_tokenizer.texts_to_sequences(y_val) \n",
         "\n",
-        "#padding zero upto maximum length\n",
-        "y_tr    =   pad_sequences(y_tr_seq, maxlen=max_summary_len, padding='post')\n",
-        "y_val   =   pad_sequences(y_val_seq, maxlen=max_summary_len, padding='post')\n",
+        "#Padding zero upto maximum length\n",
+        "y_tr = pad_sequences(y_tr_seq, maxlen=max_summary_len, padding='post')\n",
+        "y_val = pad_sequences(y_val_seq, maxlen=max_summary_len, padding='post')\n",
         "\n",
         "#size of vocabulary\n",
-        "y_voc  =   y_tokenizer.num_words +1\n",
+        "y_voc = y_tokenizer.num_words +1\n",
         "print(\"Size of vocabulary in Y = {}\".format(y_voc))"
       ],
       "execution_count": 0,
@@ -2111,7 +2158,7 @@
         "colab": {}
       },
       "source": [
-        "#Remove summaris with only START and END\n",
+        "#Remove summaries with only START and END\n",
         "\n",
         "ind=[]\n",
         "for i in range(len(y_tr)):\n",
@@ -2165,13 +2212,10 @@
         "from tensorflow.python.keras.layers import Layer\n",
         "from tensorflow.python.keras import backend as K\n",
         "\n",
+        "#Bahdanau Attention method\n",
         "\n",
         "class AttentionLayer(Layer):\n",
-        "    \"\"\"\n",
-        "    This class implements Bahdanau attention (https://arxiv.org/pdf/1409.0473.pdf).\n",
-        "    There are three sets of weights introduced W_a, U_a, and V_a\n",
-        "     \"\"\"\n",
-        "\n",
+        "    \n",
         "    def __init__(self, **kwargs):\n",
         "        super(AttentionLayer, self).__init__(**kwargs)\n",
         "\n",
@@ -2291,13 +2335,11 @@
       "metadata": {
         "id": "dQq31Aq4zoiY",
         "colab_type": "code",
-        "outputId": "117f77ef-7cba-4c83-cb35-2970f7fa5182",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 717
-        }
+        "colab": {}
       },
       "source": [
+        "#Final model implementation\n",
+        "\n",
         "pd.set_option(\"display.max_colwidth\", 200)\n",
         "warnings.filterwarnings(\"ignore\") \n",
         "K.clear_session()\n",
@@ -2305,99 +2347,52 @@
         "latent_dim = 300\n",
         "embedding_dim=100\n",
         "\n",
-        "# Encoder\n",
+        "#Encoder\n",
         "encoder_inputs = Input(shape=(max_text_len,))\n",
         "\n",
-        "#embedding layer\n",
+        "#Embedding layer\n",
         "enc_emb =  Embedding(x_voc, embedding_dim,trainable=True)(encoder_inputs)\n",
         "\n",
-        "#encoder lstm 1\n",
+        "#Encoder lstm 1\n",
         "encoder_lstm1 = LSTM(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "encoder_output1, state_h1, state_c1 = encoder_lstm1(enc_emb)\n",
         "\n",
-        "#encoder lstm 2\n",
+        "#Encoder lstm 2\n",
         "encoder_lstm2 = LSTM(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "encoder_output2, state_h2, state_c2 = encoder_lstm2(encoder_output1)\n",
         "\n",
-        "#encoder lstm 3\n",
+        "#Encoder lstm 3\n",
         "encoder_lstm3=LSTM(latent_dim, return_state=True, return_sequences=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "encoder_outputs, state_h, state_c= encoder_lstm3(encoder_output2)\n",
         "\n",
-        "# Set up the decoder, using `encoder_states` as initial state.\n",
+        "#Set up the decoder, using `encoder_states` as initial state.\n",
         "decoder_inputs = Input(shape=(None,))\n",
         "\n",
-        "#embedding layer\n",
+        "#Embedding layer\n",
         "dec_emb_layer = Embedding(y_voc, embedding_dim,trainable=True)\n",
         "dec_emb = dec_emb_layer(decoder_inputs)\n",
         "\n",
         "decoder_lstm = LSTM(latent_dim, return_sequences=True, return_state=True,dropout=0.4,recurrent_dropout=0.2)\n",
         "decoder_outputs,decoder_fwd_state, decoder_back_state = decoder_lstm(dec_emb,initial_state=[state_h, state_c])\n",
         "\n",
-        "# Attention layer\n",
+        "#Attention layer\n",
         "attn_layer = AttentionLayer(name='attention_layer')\n",
         "attn_out, attn_states = attn_layer([encoder_outputs, decoder_outputs])\n",
         "\n",
-        "# Concat attention input and decoder LSTM output\n",
+        "#Concat attention input and decoder LSTM output\n",
         "decoder_concat_input = Concatenate(axis=-1, name='concat_layer')([decoder_outputs, attn_out])\n",
         "\n",
-        "#dense layer\n",
+        "#Dense layer\n",
         "decoder_dense =  TimeDistributed(Dense(y_voc, activation='softmax'))\n",
         "decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
-        "# Define the model \n",
+        "#Define the model \n",
         "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
         "\n",
-        "model.summary() "
+        "#model.summary() "
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/keras/initializers.py:119: calling RandomUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n",
-            "Model: \"model\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_1 (InputLayer)            [(None, 200)]        0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "embedding (Embedding)           (None, 200, 100)     2031300     input_1[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lstm (LSTM)                     [(None, 200, 300), ( 481200      embedding[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "input_2 (InputLayer)            [(None, None)]       0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "lstm_1 (LSTM)                   [(None, 200, 300), ( 721200      lstm[0][0]                       \n",
-            "__________________________________________________________________________________________________\n",
-            "embedding_1 (Embedding)         (None, None, 100)    391200      input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lstm_2 (LSTM)                   [(None, 200, 300), ( 721200      lstm_1[0][0]                     \n",
-            "__________________________________________________________________________________________________\n",
-            "lstm_3 (LSTM)                   [(None, None, 300),  481200      embedding_1[0][0]                \n",
-            "                                                                 lstm_2[0][1]                     \n",
-            "                                                                 lstm_2[0][2]                     \n",
-            "__________________________________________________________________________________________________\n",
-            "attention_layer (AttentionLayer ((None, None, 300),  180300      lstm_2[0][0]                     \n",
-            "                                                                 lstm_3[0][0]                     \n",
-            "__________________________________________________________________________________________________\n",
-            "concat_layer (Concatenate)      (None, None, 600)    0           lstm_3[0][0]                     \n",
-            "                                                                 attention_layer[0][0]            \n",
-            "__________________________________________________________________________________________________\n",
-            "time_distributed (TimeDistribut (None, None, 3912)   2351112     concat_layer[0][0]               \n",
-            "==================================================================================================\n",
-            "Total params: 7,358,712\n",
-            "Trainable params: 7,358,712\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
